services/face_analyzer/kubernetes/face-analyzer.pod.yml
apiVersion: v1
kind: Pod
metadata:
  # This name uniquely identifies the pod
  name: face-analyzer-pod
  labels:
    app: face-analyzer
spec:
  containers:
  - name: face-analyzer
    image: csia-pme/face-analyzer
    # As we use the local image, there is no need to pull the image
    imagePullPolicy: Never
    ports:
    - containerPort: 80
