services/face_analyzer/kubernetes/face-analyzer.service.yml
apiVersion: v1
kind: Service
metadata:
  name: face-analyzer-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8484
      targetPort: 80
      protocol: TCP
  selector:
    app: face-analyzer
