services/face_analyzer/kubernetes/face-analyzer.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: face-analyzer-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
spec:
  rules:
  - host: face-analyzer-csia-pme.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: face-analyzer-service
            port:
              number: 80
  tls:
    - hosts:
        - face-analyzer-csia-pme.kube.isc.heia-fr.ch
